--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@vercel/speed-insights": "^1.0.1",
     "axios": "^1.6.2",
     "firebase": "^10.5.2",
+    "formidable": "^3.5.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-connect": "^1.0.0-next.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
